<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_gradient"
    tools:context=".views.activities.Login">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="571dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/ic_btn_rounded"
        android:text="@string/loginButton"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#85c370"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firstConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="641dp"
        android:background="@color/Onyx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="49dp"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            android:fontFamily="@font/helvetica_neue_bold"
            android:gravity="center"
            android:lineSpacingExtra="41sp"
            android:text="@string/loginTitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/userIdMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="496dp"

        android:fontFamily="@font/helvetica_neue"
        android:lineSpacingExtra="26sp"
        android:text="@string/userIdMessage"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageView
        android:id="@+id/infoID"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="499dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_info"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">

    </ImageView>

    <EditText
        android:id="@+id/userIdText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="469dp"
        android:autofillHints="UserID"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/helvetica_neue"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="460dp"
        android:background="#50a235"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>


    <TextView
        android:id="@+id/passMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="237dp"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="404dp"
        android:fontFamily="@font/helvetica_neue"
        android:text="@string/passwordMessage"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageView
        android:id="@+id/infoPass"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="230dp"
        android:layout_marginBottom="407dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">

    </ImageView>

    <EditText
        android:id="@+id/passText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="273dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="377dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/helvetica_neue"
        android:inputType="textPassword"
        android:maxLength="30"
        android:maxLines="1"
        android:textAlignment="viewStart"
        android:textColor="@color/white"

        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="297dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="368dp"
        android:background="#50a235"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <TextView
        android:id="@+id/showPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="272dp"
        android:layout_marginTop="241dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="409dp"
        android:fontFamily="@font/helvetica_neue_bold"
        android:text="@string/showPassword"
        android:textAlignment="center"
        android:textColor="@color/ForestGreen"
        android:textSize="13sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/defaultLanguageButton"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginStart="189dp"
        android:layout_marginTop="395dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/Onyx"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/mainConstraint"
        app:layout_constraintEnd_toEndOf="@id/mainConstraint"
        app:layout_constraintStart_toStartOf="@id/mainConstraint"
        app:layout_constraintTop_toTopOf="@+id/mainConstraint">

        <ImageView
            android:id="@+id/defaultLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/greece_flag_round_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:id="@+id/defaultLanguageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/helvetica_neue"
            android:text="@string/greekButton"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <ImageView
            android:id="@+id/arrowDown"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="21dp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/englishButton"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="453dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="162dp"
        android:background="@drawable/roundstyle3"
        android:backgroundTint="@color/Onyx"
        android:clickable="true"
        android:focusable="true"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/mainConstraint"
        app:layout_constraintEnd_toEndOf="@id/mainConstraint"
        app:layout_constraintStart_toStartOf="@id/mainConstraint"
        app:layout_constraintTop_toTopOf="@+id/mainConstraint">

        <ImageView
            android:id="@+id/americanFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/united_states_of_america_flag_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:id="@+id/textView3"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="47dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/helvetica_neue"
            android:maxLines="1"
            android:text="@string/englishButton"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/greekButton"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="505dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/roundstyle2"
        android:backgroundTint="@color/Onyx"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"


        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/mainConstraint"
        app:layout_constraintEnd_toEndOf="@id/mainConstraint"
        app:layout_constraintStart_toStartOf="@id/mainConstraint"
        app:layout_constraintTop_toTopOf="@+id/mainConstraint">

        <ImageView
            android:id="@+id/greekFlag"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/greece_flag_round_icon"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>


        <TextView
            android:id="@+id/textView4"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/helvetica_neue"
            android:maxLines="1"
            android:text="@string/greekButton"
            android:textAlignment="viewStart"
            android:textColor="@color/white"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/popup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/Onyx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/popup_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/helvetica_neue2"
            android:text="@string/info_user"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/popup_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CB101417"
        android:elevation="5dp"
        android:visibility="invisible">
    </ImageView>

    <include
        android:id="@+id/wrongcredentials"
        layout="@layout/wrong_credentials_pop"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    </include>


</androidx.constraintlayout.widget.ConstraintLayout>